crates/parser/tests/snapshots/test_association__aggregation_kinds.snap
---
source: crates/parser/tests/test_association.rs
expression: file
---
SourceFile {
    sections: [
        Section {
            kind: "Pure",
            imports: [],
            elements: [
                Association(
                    AssociationDef {
                        package: Some(
                            Package {
                                name: "model",
                                parent: None,
                                source_info: SourceInfo {
                                    source: "test.pure",
                                    start_line: 2,
                                    start_column: 13,
                                    end_line: 2,
                                    end_column: 17,
                                },
                            },
                        ),
                        name: "SharedAssoc",
                        properties: [
                            Property {
                                name: "left",
                                type_ref: TypeReference {
                                    path: Package {
                                        name: "A",
                                        parent: Some(
                                            Package {
                                                name: "model",
                                                parent: None,
                                                source_info: SourceInfo {
                                                    source: "test.pure",
                                                    start_line: 4,
                                                    start_column: 20,
                                                    end_line: 4,
                                                    end_column: 24,
                                                },
                                            },
                                        ),
                                        source_info: SourceInfo {
                                            source: "test.pure",
                                            start_line: 4,
                                            start_column: 27,
                                            end_line: 4,
                                            end_column: 27,
                                        },
                                    },
                                    type_arguments: [],
                                    type_variable_values: [],
                                    source_info: SourceInfo {
                                        source: "test.pure",
                                        start_line: 4,
                                        start_column: 20,
                                        end_line: 4,
                                        end_column: 24,
                                    },
                                },
                                multiplicity: ZeroOrMany,
                                aggregation: Some(
                                    Shared,
                                ),
                                default_value: None,
                                stereotypes: [],
                                tagged_values: [],
                                source_info: SourceInfo {
                                    source: "test.pure",
                                    start_line: 4,
                                    start_column: 14,
                                    end_line: 4,
                                    end_column: 17,
                                },
                            },
                            Property {
                                name: "right",
                                type_ref: TypeReference {
                                    path: Package {
                                        name: "B",
                                        parent: Some(
                                            Package {
                                                name: "model",
                                                parent: None,
                                                source_info: SourceInfo {
                                                    source: "test.pure",
                                                    start_line: 5,
                                                    start_column: 19,
                                                    end_line: 5,
                                                    end_column: 23,
                                                },
                                            },
                                        ),
                                        source_info: SourceInfo {
                                            source: "test.pure",
                                            start_line: 5,
                                            start_column: 26,
                                            end_line: 5,
                                            end_column: 26,
                                        },
                                    },
                                    type_arguments: [],
                                    type_variable_values: [],
                                    source_info: SourceInfo {
                                        source: "test.pure",
                                        start_line: 5,
                                        start_column: 19,
                                        end_line: 5,
                                        end_column: 23,
                                    },
                                },
                                multiplicity: ZeroOrMany,
                                aggregation: Some(
                                    None,
                                ),
                                default_value: None,
                                stereotypes: [],
                                tagged_values: [],
                                source_info: SourceInfo {
                                    source: "test.pure",
                                    start_line: 5,
                                    start_column: 12,
                                    end_line: 5,
                                    end_column: 16,
                                },
                            },
                        ],
                        qualified_properties: [],
                        stereotypes: [],
                        tagged_values: [],
                        source_info: SourceInfo {
                            source: "test.pure",
                            start_line: 2,
                            start_column: 1,
                            end_line: 2,
                            end_column: 11,
                        },
                    },
                ),
            ],
            source_info: SourceInfo {
                source: "test.pure",
                start_line: 1,
                start_column: 1,
                end_line: 1,
                end_column: 7,
            },
        },
    ],
    source_info: SourceInfo {
        source: "test.pure",
        start_line: 1,
        start_column: 1,
        end_line: 1,
        end_column: 7,
    },
}
